# AI-Codereview-Gitlab-Opencode

./: README.md  pyproject.toml
biz/api/routes/: webhook.py
biz/queue/: worker.py
biz/utils/: log.py  opencode_client.py  task_queue.py  test_opencode_client.py
conf/: .env.dist
opencode/: opencode.json
opencode/prompts/: code-reviewer.md  code-reviewer_v2.md  docs-searcher.md
